--- a/src/blocks/results/__news-cards/results__news-cards.css
+++ b/src/blocks/results/__news-cards/results__news-cards.css
@@ -16,6 +16,6 @@
 
 @media screen and (max-width: 680px) {
     .results__news-cards {
-        grid-template-columns: 1fr;
+        grid-template-columns: 100%;
     }
 }
